--- a/JDCloud-AX6000-Baili-immortalwrt/immortalwrt.config
+++ b/JDCloud-AX6000-Baili-immortalwrt/immortalwrt.config
@@ -9,6 +9,7 @@ CONFIG_PACKAGE_luci-theme-argon=y
 ## 外部软件源插件
 CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-lucky=y
+CONFIG_PACKAGE_luci-app-nekobox=y
 ## 默认feeds可选插件
 CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_luci-app-ttyd=y
