--- a/JDCloud-AX6000-Baili-hanwckf/.mtwifi-cfg.config
+++ b/JDCloud-AX6000-Baili-hanwckf/.mtwifi-cfg.config
@@ -12,7 +12,6 @@ CONFIG_PACKAGE_luci-app-nekobox=y
 CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-passwall2=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
 CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_ddns-scripts=y
@@ -29,18 +28,26 @@ CONFIG_PACKAGE_ddns-scripts-noip=y
 CONFIG_PACKAGE_ddns-scripts-nsupdate=y
 CONFIG_PACKAGE_ddns-scripts-route53=y
 CONFIG_PACKAGE_luci-app-arpbind=y
-CONFIG_PACKAGE_luci-app-msd_lite=y
+#组播代理
+#CONFIG_PACKAGE_luci-app-msd_lite=y
+
 CONFIG_PACKAGE_luci-app-lucky=y
 CONFIG_PACKAGE_luci-app-wol=y
-CONFIG_PACKAGE_luci-app-vlmcsd=y
-CONFIG_PACKAGE_luci-app-eqos-mtk=y
+#KMS服务器
+#CONFIG_PACKAGE_luci-app-vlmcsd=y
+#网速控制
+#CONFIG_PACKAGE_luci-app-eqos-mtk=y
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-samba4=y
 CONFIG_PACKAGE_luci-app-vsftpd=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-app-openvpn-server=y
-CONFIG_PACKAGE_luci-app-ipsec-vpnserver-manyusers=y
-CONFIG_PACKAGE_tailscale=y
+
+#CONFIG_PACKAGE_luci-app-ipsec-vpnserver-manyusers=y
+#CONFIG_PACKAGE_tailscale=y
+CONFIG_PACKAGE_luci-app-tailscale=y
+
+
 CONFIG_PACKAGE_luci-app-wireguard=y
 CONFIG_PACKAGE_qrencode=y
 CONFIG_PACKAGE_coremark=y
