--- a/JDCloud-AX6000-Baili-hanwckf/.mtwifi-cfg.config
+++ b/JDCloud-AX6000-Baili-hanwckf/.mtwifi-cfg.config
@@ -8,7 +8,11 @@ CONFIG_PACKAGE_luci-theme-design=y
 ## 外部插件
 CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-nekobox=y
+
+CONFIG_PACKAGE_luci-app-chatgpt=y
 ## 内部插件
+CONFIG_PACKAGE_luci-app-vssr=y
+CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-passwall2=y
@@ -45,11 +49,12 @@ CONFIG_PACKAGE_luci-app-openvpn-server=y
 
 #CONFIG_PACKAGE_luci-app-ipsec-vpnserver-manyusers=y
 #CONFIG_PACKAGE_tailscale=y
+#变更为：
 CONFIG_PACKAGE_luci-app-tailscale=y
 
+#CONFIG_PACKAGE_luci-app-wireguard=y
 
-CONFIG_PACKAGE_luci-app-wireguard=y
-CONFIG_PACKAGE_qrencode=y
+#CONFIG_PACKAGE_qrencode=y
 CONFIG_PACKAGE_coremark=y
 CONFIG_PACKAGE_vim-full=y
 CONFIG_PACKAGE_zsh=y
@@ -191,7 +196,7 @@ CONFIG_MTK_WSC_V2_SUPPORT=y
 # CONFIG_OPENSSL_PREFER_CHACHA_OVER_GCM is not set
 CONFIG_OPENSSL_WITH_NPN=y
 # CONFIG_PACKAGE_TURBOACC_INCLUDE_FLOW_OFFLOADING is not set
-CONFIG_PACKAGE_TURBOACC_INCLUDE_NO_FASTPATH=y
+#CONFIG_PACKAGE_TURBOACC_INCLUDE_NO_FASTPATH=y
 CONFIG_PACKAGE_blockd=y
 CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_datconf=y
@@ -301,21 +306,27 @@ CONFIG_PACKAGE_libudev-zero=y
 CONFIG_PACKAGE_libuuid=y
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
+
+
+
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ChinaDNS_NG is not set
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NONE_V2RAY=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NONE_V2RAY=y
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client is not set
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_NONE_Client=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_NONE_Server=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_NONE_Client=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_NONE_Server=y
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Client is not set
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Server is not set
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Simple_Obfs is not set
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray is not set
+
 CONFIG_PACKAGE_luci-app-turboacc-mtk=y
+CONFIG_PACKAGE_luci-i18n-turboacc-mtk-zh-cn=y
+
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_ShadowsocksR_Libev_Server is not set
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan is not set
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray is not set
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray_plugin is not set
-CONFIG_PACKAGE_luci-i18n-turboacc-mtk-zh-cn=y
+
 CONFIG_PACKAGE_mii_mgr=y
 CONFIG_PACKAGE_mtkhqos_util=y
 CONFIG_PACKAGE_nano=y
