--- a/JDCloud-AX6000-Baili-hanwckf/.mtwifi-cfg.config
+++ b/JDCloud-AX6000-Baili-hanwckf/.mtwifi-cfg.config
@@ -9,7 +9,7 @@ CONFIG_PACKAGE_luci-theme-design=y
 CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-nekobox=y
 
-CONFIG_PACKAGE_luci-app-chatgpt=y
+#CONFIG_PACKAGE_luci-app-chatgpt=y
 ## 内部插件
 CONFIG_PACKAGE_luci-app-vssr=y
 CONFIG_PACKAGE_luci-app-ssr-plus=y
