--- a/JDCloud-AX6000-Baili-immortalwrt/immortalwrt.config
+++ b/JDCloud-AX6000-Baili-immortalwrt/immortalwrt.config
@@ -11,9 +11,31 @@ CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-lucky=y
 CONFIG_PACKAGE_luci-app-nekobox=y
 ## 默认feeds可选插件
+CONFIG_PACKAGE_luci-app-vssr=y
+CONFIG_PACKAGE_luci-app-ssr-plus=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ChinaDNS_NG=n
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_MosDNS=n
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Hysteria=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Tuic_Client=n
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadow_TLS=n
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_IPT2Socks=n
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=n
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=n
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=n
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Client=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_NONE_Server=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Simple_Obfs=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_V2ray_Plugin=n
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=n
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=n
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_libustream-openssl=y
+
 CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-homeproxy=y
+CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall2=y
 CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-ddns=y
@@ -30,25 +52,25 @@ CONFIG_PACKAGE_ddns-scripts-godaddy=y
 CONFIG_PACKAGE_ddns-scripts-noip=y
 CONFIG_PACKAGE_ddns-scripts-nsupdate=y
 CONFIG_PACKAGE_ddns-scripts-route53=y
-CONFIG_PACKAGE_luci-app-arpbind=y
-CONFIG_PACKAGE_luci-app-msd_lite=y
+#CONFIG_PACKAGE_luci-app-arpbind=y
+#CONFIG_PACKAGE_luci-app-msd_lite=y
 CONFIG_PACKAGE_luci-app-wol=y
-CONFIG_PACKAGE_luci-app-vlmcsd=y
-CONFIG_PACKAGE_luci-app-eqos=y
+#CONFIG_PACKAGE_luci-app-vlmcsd=y
+#CONFIG_PACKAGE_luci-app-eqos=y
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-samba4=y
 CONFIG_PACKAGE_luci-app-vsftpd=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-app-openvpn-server=y
-CONFIG_PACKAGE_luci-app-ipsec-vpnserver-manyusers=y
-CONFIG_PACKAGE_tailscale=y
-CONFIG_PACKAGE_luci-proto-wireguard=y
-CONFIG_PACKAGE_qrencode=y
+#CONFIG_PACKAGE_luci-app-ipsec-vpnserver-manyusers=y
+CONFIG_PACKAGE_luci-app-tailscale=y
+#CONFIG_PACKAGE_luci-proto-wireguard=y
+#CONFIG_PACKAGE_qrencode=y
 CONFIG_PACKAGE_coremark=y
 CONFIG_PACKAGE_autocore=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_vim=y
-CONFIG_PACKAGE_nano=y
+#CONFIG_PACKAGE_nano=y
 CONFIG_PACKAGE_zsh=y
 CONFIG_PACKAGE_gdisk=y
 CONFIG_PACKAGE_sgdisk=y
