--- a/JDCloud-AX6000-Baili-immortalwrt/immortalwrt.config
+++ b/JDCloud-AX6000-Baili-immortalwrt/immortalwrt.config
@@ -9,10 +9,10 @@ CONFIG_PACKAGE_luci-theme-argon=y
 ## 外部软件源插件
 CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-lucky=y
-CONFIG_PACKAGE_luci-app-nekobox=y
+#CONFIG_PACKAGE_luci-app-nekobox=y
 ## 默认feeds可选插件
 CONFIG_PACKAGE_luci-app-vssr=y
-CONFIG_PACKAGE_luci-app-ssr-plus=y
+#CONFIG_PACKAGE_luci-app-ssr-plus=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ChinaDNS_NG=n
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_MosDNS=n
@@ -35,23 +35,23 @@ CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-homeproxy=y
-CONFIG_PACKAGE_luci-app-passwall=y
+#CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall2=y
 CONFIG_PACKAGE_luci-app-openclash=y
-CONFIG_PACKAGE_luci-app-ddns=y
-CONFIG_PACKAGE_ddns-scripts=y
-CONFIG_PACKAGE_ddns-scripts_aliyun=y
-CONFIG_PACKAGE_ddns-scripts-cloudflare=y
-CONFIG_PACKAGE_ddns-scripts-cnkuai=y
-CONFIG_PACKAGE_ddns-scripts-digitalocean=y
-CONFIG_PACKAGE_ddns-scripts-dnspod=y
-CONFIG_PACKAGE_ddns-scripts-dnspod-com=y
-CONFIG_PACKAGE_ddns-scripts-freedns=y
-CONFIG_PACKAGE_ddns-scripts-gandi=y
-CONFIG_PACKAGE_ddns-scripts-godaddy=y
-CONFIG_PACKAGE_ddns-scripts-noip=y
-CONFIG_PACKAGE_ddns-scripts-nsupdate=y
-CONFIG_PACKAGE_ddns-scripts-route53=y
+#CONFIG_PACKAGE_luci-app-ddns=y
+#CONFIG_PACKAGE_ddns-scripts=y
+#CONFIG_PACKAGE_ddns-scripts_aliyun=y
+#CONFIG_PACKAGE_ddns-scripts-cloudflare=y
+#CONFIG_PACKAGE_ddns-scripts-cnkuai=y
+#CONFIG_PACKAGE_ddns-scripts-digitalocean=y
+#CONFIG_PACKAGE_ddns-scripts-dnspod=y
+#CONFIG_PACKAGE_ddns-scripts-dnspod-com=y
+#CONFIG_PACKAGE_ddns-scripts-freedns=y
+#CONFIG_PACKAGE_ddns-scripts-gandi=y
+#CONFIG_PACKAGE_ddns-scripts-godaddy=y
+#CONFIG_PACKAGE_ddns-scripts-noip=y
+#CONFIG_PACKAGE_ddns-scripts-nsupdate=y
+#CONFIG_PACKAGE_ddns-scripts-route53=y
 #CONFIG_PACKAGE_luci-app-arpbind=y
 #CONFIG_PACKAGE_luci-app-msd_lite=y
 CONFIG_PACKAGE_luci-app-wol=y
@@ -61,7 +61,7 @@ CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-samba4=y
 CONFIG_PACKAGE_luci-app-vsftpd=y
 CONFIG_PACKAGE_luci-app-zerotier=y
-CONFIG_PACKAGE_luci-app-openvpn-server=y
+#CONFIG_PACKAGE_luci-app-openvpn-server=y
 #CONFIG_PACKAGE_luci-app-ipsec-vpnserver-manyusers=y
 CONFIG_PACKAGE_luci-app-tailscale=y
 #CONFIG_PACKAGE_luci-proto-wireguard=y
