--- a/JDCloud-AX6000-Baili-immortalwrt/immortalwrt.config
+++ b/JDCloud-AX6000-Baili-immortalwrt/immortalwrt.config
@@ -8,7 +8,7 @@ CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_luci-theme-argon=y
 ## 外部软件源插件
 CONFIG_PACKAGE_luci-app-oaf=y
-CONFIG_PACKAGE_luci-app-lucky=y
+#CONFIG_PACKAGE_luci-app-lucky=y
 #CONFIG_PACKAGE_luci-app-nekobox=y
 ## 默认feeds可选插件
 CONFIG_PACKAGE_luci-app-vssr=y
@@ -32,7 +32,7 @@ CONFIG_PACKAGE_luci-app-vssr=y
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=n
 #CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_libustream-openssl=y
 
-CONFIG_PACKAGE_luci-app-dockerman=y
+#CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-homeproxy=y
 #CONFIG_PACKAGE_luci-app-passwall=y
