--- a/JDCloud-AX6000-Baili-immortalwrt/immortalwrt.config
+++ b/JDCloud-AX6000-Baili-immortalwrt/immortalwrt.config
@@ -7,7 +7,7 @@ CONFIG_PACKAGE_luci-compat=y
 ## 主题皮肤
 CONFIG_PACKAGE_luci-theme-argon=y
 ## 外部软件源插件
-CONFIG_PACKAGE_luci-app-oaf=y
+#CONFIG_PACKAGE_luci-app-oaf=y
 #CONFIG_PACKAGE_luci-app-lucky=y
 #CONFIG_PACKAGE_luci-app-nekobox=y
 ## 默认feeds可选插件
@@ -54,16 +54,16 @@ CONFIG_PACKAGE_luci-app-openclash=y
 #CONFIG_PACKAGE_ddns-scripts-route53=y
 #CONFIG_PACKAGE_luci-app-arpbind=y
 #CONFIG_PACKAGE_luci-app-msd_lite=y
-CONFIG_PACKAGE_luci-app-wol=y
+#CONFIG_PACKAGE_luci-app-wol=y
 #CONFIG_PACKAGE_luci-app-vlmcsd=y
 #CONFIG_PACKAGE_luci-app-eqos=y
 CONFIG_PACKAGE_luci-app-upnp=y
-CONFIG_PACKAGE_luci-app-samba4=y
-CONFIG_PACKAGE_luci-app-vsftpd=y
-CONFIG_PACKAGE_luci-app-zerotier=y
+#CONFIG_PACKAGE_luci-app-samba4=y
+#CONFIG_PACKAGE_luci-app-vsftpd=y
+#CONFIG_PACKAGE_luci-app-zerotier=y
 #CONFIG_PACKAGE_luci-app-openvpn-server=y
 #CONFIG_PACKAGE_luci-app-ipsec-vpnserver-manyusers=y
-CONFIG_PACKAGE_luci-app-tailscale=y
+#CONFIG_PACKAGE_luci-app-tailscale=y
 #CONFIG_PACKAGE_luci-proto-wireguard=y
 #CONFIG_PACKAGE_qrencode=y
 CONFIG_PACKAGE_coremark=y
